ci: revert to pull_request to avoid cache poisoning
Revert from pull_request_target back to pull_request trigger.

The cache poisoning vulnerability with pull_request_target + untrusted
checkout + sccache is more severe than the original action bypass
concern. With pull_request_target, a malicious PR could poison the
build cache, affecting all future main branch builds.

The action bypass risk is mitigated because:
- External contributors still need a maintainer to add the run-ci label
- They cannot bypass this even if they modify the check-ci action
- The label must be added by someone with write access to the repo

--- a/.github/actions/check-ci/action.yml
+++ b/.github/actions/check-ci/action.yml
@@ -21,7 +21,7 @@ runs:
         should_run="false"
         reason=""
 
-        if [[ "$EVENT" != "pull_request" && "$EVENT" != "pull_request_target" ]]; then
+        if [[ "$EVENT" != "pull_request" ]]; then
           should_run="true"
           reason="not a pull request ($EVENT)"
         elif [[ "$ACTOR" == "dependabot[bot]" ]]; then
