--- a/.github/workflows/benchmark-tokenizer.yml
+++ b/.github/workflows/benchmark-tokenizer.yml
@@ -6,9 +6,11 @@ on:
     paths:
       - 'model_gateway/benches/tokenizer_benchmark.rs'
       - 'tokenizer/**'
-  pull_request_target:
+  pull_request:
     branches: [ main ]
-    types: [opened, synchronize, reopened, labeled]
+    paths:
+      - 'model_gateway/benches/tokenizer_benchmark.rs'
+      - 'tokenizer/**'
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * 0'
@@ -42,13 +44,12 @@ jobs:
     if: |
       github.repository == 'lightseekorg/smg' &&
       needs.check-ci.outputs.should_run == 'true' &&
-      (github.event_name != 'pull_request_target' ||
+      (github.event_name != 'pull_request' ||
        contains(github.event.pull_request.labels.*.name, 'router-benchmark'))
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
           fetch-depth: 100
 
       - name: Setup Rust
